css/styles.css
/* ---- reset ---- */

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}
html,
body {
  width: 100%;
  height: 100%;
  min-height: 400px;
  min-width: 300px;
  /*overflow: hidden;*/
  font-family: 'Libre Baskerville', serif;
  font-size: 14px;
  color: #343434;
  background-color: #343434;
}
p, ul, ol {
  text-decoration: none; 
  font-size: 1em;
}
li {
  margin-left: 1em;
}
section {
  overflow: auto;
  background: #fff;
}
img {
  display: block;
  width: 100%;
  height: auto;
}
body {
  min-height: 100%;
}
/*** 
*
* Colour and Typography 
*
***/

strong {
  font-family: inherit;
  font-weight: bold;
}
h1, h2, h3 {
  font-family: 'Open Sans', sans-serif;
  font-weight: bold;
}
h1 {
  text-decoration: none; 
  font-size: 2rem;
  margin-bottom: .5rem;
}
h2 {
  font-size: 1.5rem;
  font-weight: bold;
  margin-bottom: 25px;
}
h3 {
  font-size: 1.125rem;
  font-weight: bold;
  margin-bottom: 1em;
}
p {
  margin-bottom: 1em;
}
a {
  color: #8c0000;
  transition: all 0.25s ease;
}
a:hover,
a:focus {
  color: #DC2627;
}
button {
  border: none;
  background: #2C8EB3;
  width: 100%;
  margin-bottom: 20px;
  padding: 10px 20px;
  color: #fff;
  font-size: 1em;
  font-weight: bold;
    -webkit-transition: 0.25s; /* Safari */
  transition: 0.25s;
}
button:hover {
  background: #DC2627;
}
@media screen and (min-width: 640px) {
  html,
  body {
    font-size: 14px;
  }
  button {
    width: auto;
    margin: 0;
  }
}
.dropcap{
  color: #ff0000;
  font-weight: 400;
  float: left;
  font-size: 75px;
  line-height: 60px;
  padding-top: 4px;
  padding-right: 8px;
  padding-left: 3px;
  margin-bottom:-15px; 
}
.font-red {
  color: #E8182b;
}
.font-white {
  color: #fff;
}
.font-shadow {
  text-shadow: 0 0 8px rgba(0,0,0,0.75);
}
.font-shadow2 {
  text-shadow: 0 0 8px #fff;
}
.dk-blue-bg {
  background-color: #003943;
}
.dk-blue-bg h1,
.dk-blue-bg h2,
.dk-blue-bg h3,
.dk-blue-bg p,
.dk-blue-bg {
  color: #fff;
}
.grey-bg {
  background-color: #efefef;
}
.center {
  margin: 0 auto;
}
.float-left {
  float: left;
}
.float-right {
  float: right;
}
.clear-all {
  clear: both;
}
.flex {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-evenly;
  align-items: stretch;
}
.flex-center {
  justify-content: center !important;
}
.full-width {
  width: 100%;
}
.text-center {
  text-align: center;
}
.wordbreak {
  word-break: break-all;
}
.extra-top h1 {
  margin-bottom: 20px;
}
@media screen and (min-width: 630px) {
  .extra-top {
    padding-top: 40px;
  }
  .extra-top h1 {
    margin-bottom: 40px;
  }
}

/*** 
*
* Content 
*
***/
#main-wrapper {
  width: 100%;
  height: 100%;
  /*overflow: auto;*/
}
.content-wrapper {
  position: relative;
  overflow: auto;
  min-height: 100%;
}
.col-2,
.col-3,
.col-4 {
  width: 100%;
  margin: 0 auto;
}
.section-content {
  width: 100%;
  max-width: 1200px;
  margin: 80px auto;
  padding: 0 20px;
  overflow: hidden;
}
.section-content p:last-of-type {
  margin-bottom: 40px;
}
.section-content.no-margin p:last-of-type {
  margin-bottom: 0;
}
.infographic {
  padding: 0 25px 50px;
  max-width: 325px;
  max-height: 325px;
  height: auto;
  width: 100%;
}
.auto-width {
  width: auto;
}
@media screen and (min-width: 640px) {
  .section-content {
    padding: 0 40px;
  }
  .infographic {
    max-width: 400px;
    max-height: 400px;
  }
  .col-4 {
    width: 50%;
    float: left;
    margin: 0;
  }
}
@media screen and (min-width: 800px) {
  .infographic {
    padding: 0 25px 25px;
    max-width: 480px;
    max-height: 480px;
  }
  .col-2 {
    width: 50%;
    float: left;
    margin: 0 0 20px 0;
  }
  .col-4 {
    width: 25%;
    float: left;
    margin: 0;
  }
}
/* navigation */
nav.site-nav {
  position: fixed;
  width: 100%;
  top: 0;
  left: 0;
  background-color: #fff;
  box-shadow: 0px 3px 4px rgba(0,0,0,.25);
  z-index: 9999;
}
.nav-container {
  width: 100%;
  /*max-width: 1280px;*/
  margin: 0 auto;
  line-height: 0;
}
.branding {
  float: left;
}
ul.nav-list {
  display: none;
  list-style: none;
  clear: both;
}
li.nav-item a,
.branding a {
  display: inline-block;
  padding: 20px 30px;
  text-decoration: none;
  color: #343434;
  transition: all 0.25s ease;
  align-items: center;
}
li.nav-item {
  margin-left: 0;
}
li.nav-item a {
  width: 100%;
}
#showmenu {
  float: right;
  padding: 20px 30px;
  color: #343434;
  transition: all 0.25s ease;
  cursor: pointer;
}
ul.nav-list li.nav-item a:hover,
div.branding a:hover {
  /*border-bottom: 5px solid #E8182b*/
  background-color: #8B8B8B;
  color: #fff;
}
#showmenu {
  float: right;
  padding: 20px 30px;
  height: 55px;
  display: flex;
  align-items: center;
}
ul.hide {
  display: none;
}
.logo {
  display: inline-block;
  width: auto;
  max-height: 55px;
}
.bottom {
  border-bottom: 5px solid #fff;
  transition: all 0.25s ease;
  align-items: center;
}
@media screen and (min-width: 640px) {
  #showmenu {
    height: 75px;
  }
  .logo {
    max-height: 80px;
  }
  nav.site-nav {
    height: 75px;
  }
  nav.site-nav {
    height: 80px;
  }
  .nav-container {
    height: 100%;
  }
  ul.nav-list {
    display: inline-block;
    float: right;
    clear: none;
    height: 100%;
  }
  li.nav-item {
    margin: 0;
    float: left;
    height: 100%;
  }
  ul.nav-list li.nav-item a {
    display: flex;
    font-size: 1.25em;
    height: 100%;
    border-bottom: 5px solid #fff;
  }
  #showmenu {
    display: none;
  }
  ul.hide {
    display: inline-block;
  }
  ul.nav-list li.nav-item a:hover,
  div.branding a:hover,
  .bottom:hover {
    border-bottom: 5px solid #E8182b;
    background-color: initial;
    color: initial;
  }
  .active {
  border-bottom: 5px solid #E8182b !important;
  }
}

/* body content */
.title-holder {
  position: relative;
  align-content: center;
  justify-content: center;
  max-height: 800px;
  overflow: hidden;
  line-height: 0;
}
video#myVideo {
  margin-top: 50px;
  width: 100%;
}
.title-content {
  position: absolute;
  top: 40%;
  left: calc(50% - 160px);
  max-width: 320px;
  text-align: center;
  line-height: initial;
}
.title-content h1 {
  font-size: 1.5em;
}
.title-content p {
  font-size: 1em;
  padding: 0 25px;
}
@media screen and (min-width: 640px) {
  .title-content h1 {
    font-size: 2em;
  }
  .title-content p {
    font-size: 1em;
    padding: 0;
  }
    video#myVideo {
    position: relative;
    top: 0;
    left: 0;
    width: 100%;
    /*z-index-1;*/
    margin-top: 75px;
  }
  .video-wrapper {
    position: relative;
    padding-bottom: 56.25%; /* 16:9 */
    padding-top: 25px;
    height: 0;
  }
  .video-wrapper iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
  }
  .title-content {
      position: absolute;
      top: 50%;
      left: calc(50% - 200px);
      max-width: 400px;
      text-align: center;
  }
}
@media screen and (min-width: 1024px) {
  .title-content {
    max-width: 500px;
    left: calc(50% - 250px);
  }
  .title-content h1 {
    font-size: 3em;
  }
  .title-content p {
    font-size: 1.25em;
  }
}
.section-vision {
  margin: 0;
  padding: 10px;
  background: #000;
  display: flex;
  align-content: center;
  justify-content: center;
  color: #b7b7b7;
}
.section-vision p {
  margin-bottom: 0;
}
/* footer */

footer {
  background-color: #343434;
  /*padding: 40px;*/
  width: 100%;
}
footer .section-content {
  margin: 0 auto;
}
.contact-card {
  position: relative;
  display: block;
  height: 100px;
  max-width: 350px;
  padding: 15px;
  padding-left: 80px;
  margin: 0 15px 30px;
  border-radius: 20px;
  background-color: #fff;
  overflow: hidden;
}
.contact-card img {
  position: absolute;
  left: 0;
  top: 0;
  height: 100px;
  width: auto;
  padding: 0;
  margin: 0;
}
.contact-card h3 {
  font-size: .9em;
  margin-bottom: .5em;
}
.contact-card address {
  font-size: .8em;
}
@media screen and (min-width: 640px) {
  footer {
/*    padding: 80px 40px;
*/  }
  .contact-card {
    height: 150px;
    width: 350px;
    padding: 20px;
    padding-left: 120px;
  }
  .contact-card img {
    height: 150px;
  }
  .contact-card h3 {
    font-size: 1.125em;
    margin-bottom: 1em;
  }
  .contact-card address {
    font-size: 1em;
  }
}
.logos {
  display: flex;
  flex-flow: wrap;
  justify-content: center;
  align-items: stretch;
  padding: 10px;
}
.logos a {
  min-width: 100px;
  max-width: 200px;
  margin: 15px;
  padding: 10px;
  border-radius: 15px;
  background: #fff;
  display: flex;
  justify-content: center;
  align-content: center;
}
.logos a img {
  align-self: center;
}
@media screen and min-width: 640px {
  .logos {
    flex-flow: nowrap;
  }
}

/*additional page*/
.card-holder {
  justify-content: flex-start;
}
.card {
  display: block;
  width: 100%;
  padding: 15px;
  margin: 0 15px 30px;
  border: 3px solid #b9b9b9;
  border-radius: 20px;
  background-color: #fff;
  overflow: hidden;
}
.card img {
  border-radius: 200px;
  margin-bottom: 20px;
  border: 3px solid #b9b9b9;
  width: 90%;
  height: auto;
  margin-left: auto;
  margin-right: auto;
}
.card a {
  display: block;
  width: 100%;
  margin-bottom: .5rem;
}
.card-name {
  font-weight: bold;
  font-size: 1.125em;
  margin-bottom: .5em;
}
.card-jobtitle {
  margin-bottom: .5rem;
  font-size: 13px;
}
img.block-image {
  width: calc(100% + 60px);
  border: none;
  border-radius: 0;
  margin: -30px 0 30px -30px;
}
@media screen and (min-width: 400px) {
  .card {
    width: calc(50% - 30px);
  }
}
@media screen and (min-width: 640px){
  .card {
    padding: 30px;
  }
}
@media screen and (min-width: 800px){
  .card {
    width: calc(33% - 30px);
  }
}
@media screen and (min-width: 1024px){
  .card {
    width: calc(25% - 30px);
  }
}
.team-list {
  /*list-style: inside;*/
  padding: 30px 20px;
}


/* The animation code */
@keyframes pulse {
  0%   {opacity: 0.25;}
  50%  {opacity: 1;}
  100% {opacity: 0.25;}
}
#prompt {
  position: fixed;
  bottom: 20px;
  left: calc(50% - 60px);
  width: 120px;
  text-align: center;
  pointer-events: none;
  color: #fff;
  animation-name: pulse;
  animation-duration: 3s;
  animation-iteration-count: infinite;
  animation-timing-function: ease-in-out;
  background-color: rgba(0,0,0,.75);
  padding: 10px;
  border-radius: 25px;
  z-index: 10000;
}
.invisible {
  display: none;
}

